--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+#Camel properties
 camel.springboot.main-run-controller=true
+
+#Camel stream properties
 stream.scan.delay=1000
 stream.scan=true
 stream.file.watcher=true
