--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>org.manifest</groupId>
 	<artifactId>manifest-comparison-tool</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>manifest-comparison-tool</name>
 	<description>Demo project that compares 2 OSGI bundle manifests with each other and generates comparison results in form which can be convenient for further analysis.</description>
 	<properties>
